--- a/stylus/jeet/_settings.styl
+++ b/stylus/jeet/_settings.styl
@@ -1,6 +1,8 @@
 // Grid Settings
-jeet-gutter ?= 3
-jeet-parent-first ?= false
-jeet-layout-direction ?= LTR
+jeet = {
+  gutter: 3,
+  parent-first: false,
+  layout-direction: LTR
+}
 
-g = jeet-gutter
+g = jeet.gutter
