--- a/stylus/jeet/_functions.styl
+++ b/stylus/jeet/_functions.styl
@@ -1,8 +1,8 @@
 -get_span(ratio = 1)
   return ratio * 100
 
--get_column(ratios = 1, g = jeet-gutter)
-  ratios = -reverse(ratios) unless jeet-parent-first is true
+-get_column(ratios = 1, g = jeet.gutter)
+  ratios = -reverse(ratios) unless jeet.parent-first is true
   w = 100
   for ratio in ratios
     g = g / w * 100
@@ -10,7 +10,7 @@
   return w g
 
 -get_layout_direction()
-  jeet-layout-direction == RTL ? result = right : result = left
+  jeet.layout-direction == RTL ? result = right : result = left
   return result
 
 -replace_nth(list, index, value)
