use svg's for nav

--- a/assets/css/_api.styl
+++ b/assets/css/_api.styl
@@ -68,7 +68,7 @@
 .close-api
   size(0, (large-padding-block - 4))
   pos(fixed, xl-padding-block - 16, false, false, 0)
-  retina-background-image('/img/white-x')
+  background-image url('/img/white-x.svg')
   background-color #444
   background-repeat no-repeat
   background-position (med-padding-block + 4) center
