--- a/assets/css/_comparison.styl
+++ b/assets/css/_comparison.styl
@@ -19,10 +19,10 @@
   &.bigger
     height xl-padding-block
 .check
-  retina-background-image('/img/check')
+  background-image url('/img/check.svg')
   background-size 15px 12px
 .x
-  retina-background-image('/img/x')
+  background-image url('/img/x.svg')
   background-size 12px 13px
 .bootstrap-grid
   retina-background-image('/img/bootstrap-grid')
