--- a/assets/css/_footer.styl
+++ b/assets/css/_footer.styl
@@ -38,5 +38,5 @@
   background-position center
   padding 0 (small-padding-block - 3)
   margin 0 -9px 0 -11px
-  retina-background-image('/img/heart')
+  background-image url('/img/heart.svg')
   background-size 17px 15px
