--- a/assets/css/_resources.styl
+++ b/assets/css/_resources.styl
@@ -18,12 +18,12 @@
   display block
   background-color green
 .play
-  retina-background-image('/img/play-icon')
+  background-image url('/img/play-icon.svg')
   background-size 30px
   background-repeat no-repeat
   background-position center
 .fancybox-close
-  retina-background-image('/img/x')
+  background-image url('/img/x.svg')
   background-size 15px
   top 0
   right -40px
