incorporate animations on scroll

--- a/views/_features.jade
+++ b/views/_features.jade
@@ -1,11 +1,11 @@
 .features.text-center.grid-container(data-scroll-index='1')
   .cf
-    .contained
+    .contained.scrollReveal
       h1 What makes a good grid system?
       h2 A sub head. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     .contained.edit-example
       .third.flexibility.column-example
-        .features-img.flexibility-img
+        .features-img.flexibility-img.scrollReveal
         h3 Flexibility
         p
           | Jeet is built on CSS preprocessors. It's capable of doing a lot of programatic calculations that CSS can't. As such, you're no longer limited to classes like 
@@ -14,13 +14,13 @@
           span.italic  any
           |  fraction, decimal, or combination of the two, to create a completely custom grid.
       .third.speed
-        .features-img.speed-img
+        .features-img.speed-img.scrollReveal
         h3 Speed
         p Jeet is famous for being the fastest grid system in the world. It's easy to read, terse, syntax (e.g. 
           code col(1/3)
           | ) allows you to craft a completely custom structure to your site literally in minutes.
       .third.integration
-        .features-img.integration-img
+        .features-img.integration-img.scrollReveal
         h3 Integration
         p Jeet can work in any environment's pipeline whether it be a static site in SCSS, a Node package in Stylus, or as a Rails application. Anywhere Stylus or SCSS work, Jeet will work.
   include _nav-full-color
