--- a/views/_resources.jade
+++ b/views/_resources.jade
@@ -3,15 +3,15 @@
     h1.text-center Learn by example.
     h2.text-center We walk you through Jeet in short, disgestible, screencasts.
   .contained
-    .third.tight.video
+    .third.tight.video.scrollReveal
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #1 Name
-    .third.tight.video
+    .third.tight.video.scrollReveal
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #2 Name
-    .third.tight.video
+    .third.tight.video.scrollReveal
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #3 Name
