--- a/views/_share.jade
+++ b/views/_share.jade
@@ -1,11 +1,12 @@
 .share(data-scroll-index='6')
   .contained
     .centered.center-example
-      h1.text-center Spread the good word.
-      h2.text-center Share Jeet with your friends.
-      a.mt-facebook.mt-share-inline-circle(href='https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fjeet.gs%2F')
+      .cta-animation
+        h1.text-center Spread the good word.
+        h2.text-center Share Jeet with your friends.
+      a.mt-facebook.mt-share-inline-circle.scrollReveal(href='https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fjeet.gs%2F')
         img(src='http://mojotech-static.s3.amazonaws.com/facebook@2x.png')
-      a.mt-twitter.mt-share-inline-circle(href='http://twitter.com/intent/tweet?text=Break%20Out%20of%20the%2012%20Column%20Grid!%20Jeet%20provides%20a%20more%20flexible%20grid%20system%20-%20assign%20width%20to%20your%20elements%20and%20let%20Jeet%20do%20the%20rest.&url=http%3A%2F%2Fjeet.gs%2F')
+      a.mt-twitter.mt-share-inline-circle.scrollReveal(href='http://twitter.com/intent/tweet?text=Break%20Out%20of%20the%2012%20Column%20Grid!%20Jeet%20provides%20a%20more%20flexible%20grid%20system%20-%20assign%20width%20to%20your%20elements%20and%20let%20Jeet%20do%20the%20rest.&url=http%3A%2F%2Fjeet.gs%2F')
         img(src='http://mojotech-static.s3.amazonaws.com/twitter@2x.png')
-      a.mt-google.mt-share-inline-circle(href='https://plus.google.com/share?url=http%3A%2F%2Fjeet.gs%2F')
+      a.mt-google.mt-share-inline-circle.scrollReveal(href='https://plus.google.com/share?url=http%3A%2F%2Fjeet.gs%2F')
         img(src='http://mojotech-static.s3.amazonaws.com/google@2x.png')
