--- a/views/_featured-articles.jade
+++ b/views/_featured-articles.jade
@@ -2,12 +2,12 @@
   .contained
     h2.text-center Read about us in...
   .contained
-    .half.smashing-magazine.shift-example.unshift-example
+    .half.smashing-magazine.shift-example.unshift-example.scrollReveal
       h3 Title of external tutorial here
       p.article-summary
         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lectus quam, pretium tincidunt , faucibus ac vivamus lacusaliquet vel orci sit amet, pharetra aliquam sapien. Aenean ac nisi in velit porta dictum. Mauris justo libero, porttitor et purus id. 
         a.inline-link(href='http://smashingmagazine.com') Read More
-    .half.css-tricks
+    .half.css-tricks.scrollReveal
       h3 Title of external tutorial here
       p.article-summary
         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lectus quam, pretium tincidunt , faucibus ac vivamus lacusaliquet vel orci sit amet, pharetra aliquam sapien. Aenean ac nisi in velit porta dictum. Mauris justo libero, porttitor et purus id. 
