--- a/assets/css/_nav.styl
+++ b/assets/css/_nav.styl
@@ -8,14 +8,14 @@
   &.full-color
     z-index 10
     .logo
-      background-image url('/img/jeet-logo-color.svg')
+      background-image url('../img/jeet-logo-color.svg')
     .side-nav-link:hover, .side-nav-link.hover
       background-color rgba(white, 0.9)
       .nav-label
         color dark-grey
   &.green, &.light-green, &.orange
     .logo
-      background-image url('/img/jeet-logo-white.svg')
+      background-image url('../img/jeet-logo-white.svg')
     .side-nav-link:hover, .side-nav-link.hover
       .nav-label
         color white
