[fix] comparison images

--- a/assets/css/_comparison.styl
+++ b/assets/css/_comparison.styl
@@ -19,19 +19,19 @@
   &.bigger
     height xl-padding-block
 .check
-  background-image url('/img/check.svg')
+  background-image url('../img/check.svg')
   background-size 15px 12px
 .x
-  background-image url('/img/x.svg')
+  background-image url('../img/x.svg')
   background-size 12px 13px
 .bootstrap-grid
-  retina-background-image('/img/bootstrap-grid')
+  retina-background-image('../img/bootstrap-grid')
   background-size 139px 22px
 .foundation-grid
-  retina-background-image('/img/foundation-grid')
+  retina-background-image('../img/foundation-grid')
   background-size 144px 19px
 .jeet-logo
-  retina-background-image('/img/bootstrap-grid')
+  retina-background-image('../img/bootstrap-grid')
   background-size 139px 22px
 .comparative
   box-sizing border-box
