[fix] Features images

--- a/assets/css/_features.styl
+++ b/assets/css/_features.styl
@@ -24,11 +24,11 @@
   size(140px)
   margin auto
 .flexibility-img
-  retina-background-image('/img/flexibility')
+  retina-background-image('../img/flexibility')
   background-size 140px
 .speed-img
-  retina-background-image('/img/speed')
+  retina-background-image('../img/speed')
   background-size 140px
 .integration-img
-  retina-background-image('/img/integration')
+  retina-background-image('../img/integration')
   background-size 140px
