[fix] Footer images

--- a/assets/css/_footer.styl
+++ b/assets/css/_footer.styl
@@ -1,7 +1,7 @@
 .footer
   column(1)
   position relative
-  padding (small-padding-block - 4) 0 (small-padding-block - 3) 0 
+  padding (small-padding-block - 4) 0 (small-padding-block - 3) 0
   color light-blue
   text-align center
   background charcoal
@@ -38,5 +38,5 @@
   background-position center
   padding 0 (small-padding-block - 3)
   margin 0 -9px 0 -11px
-  background-image url('/img/heart.svg')
+  background-image url('../img/heart.svg')
   background-size 17px 15px
