[cleanup] Migrate vendor styles

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -2,8 +2,10 @@ normalize-css()
 base()
 
 @import '_variables'
-@import '_jeet'
-@import '_mo'
+@import 'vendor/jeet'
+@import 'vendor/mo'
+@import 'vendor/fancybox'
+@import 'vendor/animate'
 @import '_fonts'
 @import '_base'
 @import '_nav'
@@ -13,9 +15,7 @@ base()
 @import '_features'
 @import '_comparison'
 @import '_installation'
-@import '_fancybox'
 @import '_resources'
 @import '_featured-articles'
 @import '_share'
 @import '_footer'
-@import '_animate'
