--- a/assets/css/_comparison.styl
+++ b/assets/css/_comparison.styl
@@ -1,5 +1,5 @@
 .comparison
-  padding (section-padding-block - xl-padding-block) 0 xl-padding-block 0
+  padding 0 0 xl-padding-block 0
   .focused-example
     &.comparatives, &.bootstrap, &.foundation
       border-right none
@@ -31,8 +31,8 @@
   retina-background-image('../img/foundation-grid')
   background-size 144px 19px
 .jeet-logo
-  retina-background-image('../img/bootstrap-grid')
-  background-size 139px 22px
+  background-image url('../img/jeet-logo-color.svg')
+  background-size 86px 36px
 .comparative
   box-sizing border-box
   text-align left
