modify and slim animations

--- a/views/_comparison.jade
+++ b/views/_comparison.jade
@@ -1,7 +1,7 @@
 .comparison.text-center.grid-container(data-scroll-index='2')
-  .contained.scrollReveal
+  .contained.scrollReveal.fade-in
     h2 Jeet is better than your weak-ass grid.
-  .contained.comparison-animation
+  .contained.scrollReveal.comparison-animation
     .comparatives.fourth.span-example
       .blank-box.bigger.cell
       .comparative.darker.cell
