--- a/views/_github-band.jade
+++ b/views/_github-band.jade
@@ -1,5 +1,5 @@
 .github-band
-  .contained
+  .contained.scrollReveal
     p.last-updated.white.half.no-gutter
       |Last updated on Github 
       a.white.latest-commit-link(href='#') March 13, 2014
