--- a/views/_resources.jade
+++ b/views/_resources.jade
@@ -1,17 +1,17 @@
 .resources.grid-container(data-scroll-index='4')
   .contained
-    h1.text-center Learn by example.
-    h2.text-center We walk you through Jeet in short, disgestible, screencasts.
+    h1.text-center.scrollReveal.fade-in Learn by example.
+    h2.text-center.scrollReveal.fade-in We walk you through Jeet in short, disgestible, screencasts.
   .contained
-    .third.tight.video.scrollReveal
+    .third.tight.video.getting-started.scrollReveal
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #1 Name
-    .third.tight.video.scrollReveal
+    .third.tight.video.basic-use.scrollReveal.flip-staggered-second
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #2 Name
-    .third.tight.video.scrollReveal
+    .third.tight.video.advanced-use.scrollReveal.flip-staggered-third
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #3 Name
