--- a/views/_hero.jade
+++ b/views/_hero.jade
@@ -1,7 +1,7 @@
 .hero.text-center(data-scroll-index='0')
   .contained
-    h1.headline.white Break Out of the 12 Column Grid
-    p.nav-narrative.white
+    h1.headline.white.scrollReveal.fade-in Break Out of the 12 Column Grid
+    p.nav-narrative.white.scrollReveal.fadeInUp-staggered-second
       | Tired of being stuck in a fixed number of columns? Jeet provides a 
       a.white.inline-link(data-scroll-goto='1') more flexible 
       | grid system than you've ever used before. 
@@ -9,7 +9,7 @@
       |  Jeet and assign widths to your elements with fractions (or even decimals), and let Jeet 
       a.white.inline-link(data-scroll-goto='3') do the rest
       | .
-    .grid-toggle
+    .grid-toggle.scrollReveal.fadeInUp-staggered-third
       .track
         p.hide-grid-label hide grid
         p.show-grid-label.white show grid
