--- a/views/_installation.jade
+++ b/views/_installation.jade
@@ -1,8 +1,8 @@
 .installation.grid-container(data-scroll-index='3') 
   .contained
-    h1.text-center.scrollReveal Getting started is easy as hell.
-    h2.text-center.scrollReveal Something about two options lorem ipsum dolor sit amet.
-    .half.scss.stack-example.unstack-example.scrollReveal
+    h1.text-center.scrollReveal.fade-in Getting started is easy as hell.
+    h2.text-center.scrollReveal.fade-in Something about two options lorem ipsum dolor sit amet.
+    .half.scss.stack-example.scrollReveal.slide-in-first
       h3 SCSS Installation
       ol
         li
@@ -27,7 +27,7 @@
           p.copy-code-above
             | goes at the top of  
             code ~/Project/css/foo.scss
-    .half.stylus.scrollReveal
+    .half.stylus.scrollReveal.slide-in-second
       h3 Stylus Installation
       ol
         li
